5.3.0 -> 5.3.1:
    - jbj: hkp: fix: unbreak package signatures (but creepy logic todo++).
    - jbj: hkp: pull the trailing "...=0x" out of _hkp_keyserver_query.
    - jbj: hkp: retrofit macro madness disablers for hkp:// lookups.
    - jbj: hkp: permit string lookups.
    - jbj: iob: increase max. buffer from 256Kb to 1Mb for pubkeys.
    - jbj: hkp: add a rpmhkp object to manage hkp:// pubkey lookup/validate.
    - jbj: digest: fix: don't count the trailing NUL for ascii digests.
    - jbj: gc: truncate DSA digests to 160bits.
    - jbj: bc: truncate DSA digests to 160bits.
    - jbj: bc: fix: eliminate static buffer overflow.
    - jbj: ssl: ensure RSA/DSA parameters are set.
    - jbj: hkp: expose pubky/signature parameter setters.
    - jbj: hkp: add a NULL sentinel to pgpGrabPkts packaet array.
    - jbk: hkp: add PGPSIGTYPE_KEY_BINDING handling. never seen one *shrug*.
    - jbj: hkp: expose pgpGrabPkts in loader maps.
    - jbj: hkp: permit fingerprints on public subkeys.
    - jbj: gcrypt: fix: convert hash as signed for RSA, unsigned for DSA.
    - jbj: fix: save chroot value across embedded scriptlet execution.
	from Przemyslaw Iskra <sparky@pld-linux.org>.
    - jbj: tests: "make check" for CentOS5.4 passes.
    - jbj: permit --with-neon=internal.
    - jbj: beecrypt: permit --with-beecrypt=internal (w manual checkout/autogen)

5.3a1 -> 5.3.0
    - jbj: tag the rpm-5.3.0 tarball.
    - jbj: tests: "make check" for ubuntu 10.04 passes.
    - jbj: perl: repair "make test" by changing the tests.
    - jbj: dist: don't bother distributing tbdb.c
    - jbj: lua: fix: attempt to create %{pkgbindir} if it doesn't exists.
    - jbj: i18n: update po files (Translation Project).
    - jbj: rpmdb: fix: replace assert failures with RPMRC_FAIL returns.
    - jbj: dbi: rework the error message to supply copious debug details.
    - jbj: dbi: fix: --import as non-root assert failure.
    - jbj: DB_CONFIG: fix: add mutex_set_max 8000. better scaling needed, todo++.