@@ -6,6 +6,8 @@
 #define	_RPMIOB_INTERNAL	/* XXX rpmiobSlurp */
 #include <rpmiotypes.h>
 #include <rpmio.h>
+#define	_RPMHKP_INTERNAL
+#include <rpmhkp.h>
 #include <rpmmacro.h>
 #include <rpmcb.h>
 
@@ -21,7 +23,7 @@
 #include <rpmdb.h>
 
 #include <rpmps.h>
-#define	_RPMTS_INTERNAL		/* XXX ts->pkpkt, ts->pkpktlen */
+#define	_RPMTS_INTERNAL		/* XXX ts->hkp */
 #include <rpmts.h>
 
 #include "debug.h"
@@ -296,14 +298,17 @@ rpmRC rpmnsProbeSignature(void * _ts, const char * fn, const char * sigfn,
 {
     rpmts ts = _ts;
     pgpDig dig = rpmtsDig(ts);
-    pgpDigParams sigp;
-    pgpDigParams pubp;
+    pgpDigParams sigp = pgpGetSignature(dig);
+    pgpDigParams pubp = pgpGetPubkey(dig);
     rpmuint8_t * sigpkt = NULL;
     size_t sigpktlen = 0;
     DIGEST_CTX ctx = NULL;
-    int printing = 0;
     rpmRC rc = RPMRC_FAIL;	/* assume failure */
     int xx;
+rpmhkp hkp = NULL;
+pgpPkt pp = alloca(sizeof(*pp));
+size_t pleft;
+int validate = 1;
 
 if (_rpmns_debug)
 fprintf(stderr, "==> check(%s, %s, %s, %s)\n", fn,
@@ -333,14 +338,11 @@ fprintf(stderr, "==> pgpReadPkts(%s) SIG %p[%u] ret %d\n", _sigfn, sigpkt, (unsi
 	}
 	_sigfn = _free(_sigfn);
     }
-    xx = pgpPrtPkts((rpmuint8_t *)sigpkt, sigpktlen, dig, printing);
-    if (xx) {
-if (_rpmns_debug)
-fprintf(stderr, "==> pgpPrtPkts SIG %p[%u] ret %d\n", sigpkt, (unsigned)sigpktlen, xx);
-	goto exit;
-    }
 
-    sigp = pgpGetSignature(dig);
+    pleft = sigpktlen;
+    xx = pgpPktLen(sigpkt, pleft, pp);
+    xx = rpmhkpLoadSignature(NULL, dig, pp);
+    if (xx) goto exit;
 
     if (sigp->version != (rpmuint8_t)3 && sigp->version != (rpmuint8_t)4) {
 if (_rpmns_debug)
@@ -348,25 +350,58 @@ fprintf(stderr, "==> unverifiable V%u\n", (unsigned)sigp->version);
 	goto exit;
     }
 
+    if (ts->hkp == NULL)
+	ts->hkp = rpmhkpNew(NULL, 0);
+    hkp = rpmhkpLink(ts->hkp);
+
     /* Load the pubkey. Use pubfn if specified, otherwise rpmdb keyring. */
     if (pubfn && *pubfn) {
 	const char * _pubfn = rpmExpand(pubfn, NULL);
 /*@-type@*/
-	xx = pgpReadPkts(_pubfn, &ts->pkpkt, &ts->pkpktlen);
+hkp->pkt = _free(hkp->pkt);	/* XXX memleaks */
+hkp->pktlen = 0;
+	xx = pgpReadPkts(_pubfn, &hkp->pkt, &hkp->pktlen);
 /*@=type@*/
 	if (xx != PGPARMOR_PUBKEY) {
 if (_rpmns_debug)
-fprintf(stderr, "==> pgpReadPkts(%s) PUB %p[%u] ret %d\n", _pubfn, ts->pkpkt, (unsigned int)ts->pkpktlen, xx);
+fprintf(stderr, "==> pgpReadPkts(%s) PUB %p[%u] ret %d\n", _pubfn, hkp->pkt, (unsigned)hkp->pktlen, xx);
 	    _pubfn = _free(_pubfn);
 	    goto exit;
 	}
 	_pubfn = _free(_pubfn);
-	xx = pgpPrtPkts((rpmuint8_t *)ts->pkpkt, ts->pkpktlen, dig, printing);
-	if (xx) {
-if (_rpmns_debug)
-fprintf(stderr, "==> pgpPrtPkts PUB %p[%u] ret %d\n", ts->pkpkt, (unsigned int)ts->pkpktlen, xx);
-	    goto exit;
+
+	/* Split the result into packet array. */
+hkp->pkts = _free(hkp->pkts);	/* XXX memleaks */
+hkp->npkts = 0;
+	xx = pgpGrabPkts(hkp->pkt, hkp->pktlen, &hkp->pkts, &hkp->npkts);
+
+	if (!xx)
+	    (void) pgpPubkeyFingerprint(hkp->pkt, hkp->pktlen, hkp->keyid);
+	memcpy(pubp->signid, hkp->keyid, sizeof(pubp->signid));/* XXX useless */
+
+	/* Validate pubkey self-signatures. */
+	if (validate) {
+	    xx = rpmhkpValidate(hkp, NULL);
+	    switch (xx) {
+	    case RPMRC_OK:
+		break;
+	    case RPMRC_NOTFOUND:
+	    case RPMRC_FAIL:	/* XXX remap to NOTFOUND? */
+	    case RPMRC_NOTTRUSTED:
+	    case RPMRC_NOKEY:
+	    default:
+		rc = xx;
+		goto exit;
+	    }
 	}
+
+	/* Retrieve parameters from pubkey/subkey packet(s). */
+	xx = rpmhkpFindKey(hkp, dig, sigp->signid, sigp->pubkey_algo);
+	if (xx) goto exit;
+
+#ifdef	DYING
+_rpmhkpDumpDig(__FUNCTION__, dig);
+#endif
     } else {
 	if ((rc = pgpFindPubkey(dig)) != RPMRC_OK) {
 if (_rpmns_debug)
@@ -374,8 +409,6 @@ fprintf(stderr, "==> pgpFindPubkey ret %d\n", xx);
 	    goto exit;
 	}
     }
-
-    pubp = pgpGetPubkey(dig);
 
     /* Is this the requested pubkey? */
     if (pubid && *pubid) {
@@ -489,13 +522,15 @@ fprintf(stderr, "==> rpmiobSlurp(%s) MSG ret %d\n", _fn, _rc);
 
     if (sigp->hash != NULL)
 	xx = rpmDigestUpdate(ctx, sigp->hash, sigp->hashlen);
+
     if (sigp->version == (rpmuint8_t)4) {
-	rpmuint32_t nb = (rpmuint32_t)sigp->hashlen;
 	rpmuint8_t trailer[6];
-	nb = (rpmuint32_t)htonl(nb);
 	trailer[0] = sigp->version;
 	trailer[1] = (rpmuint8_t)0xff;
-	memcpy(trailer+2, &nb, sizeof(nb));
+	trailer[2] = (sigp->hashlen >> 24) & 0xff;
+	trailer[3] = (sigp->hashlen >> 16) & 0xff;
+	trailer[4] = (sigp->hashlen >>  8) & 0xff;
+	trailer[5] = (sigp->hashlen      ) & 0xff;
 	xx = rpmDigestUpdate(ctx, trailer, sizeof(trailer));
     }
 
@@ -532,8 +567,8 @@ fprintf(stderr, "==> can't load pubkey_algo(%u)\n", (unsigned)sigp->pubkey_algo)
 
 exit:
     sigpkt = _free(sigpkt);
-    ts->pkpkt = _free(ts->pkpkt);
-    ts->pkpktlen = 0;
+    (void) rpmhkpFree(hkp);
+    hkp = NULL;
 /*@-nullstate@*/
     rpmtsCleanDig(ts);
 /*@=nullstate@*/
